Implmented basic UI functionality for checkout page.

--- a/src/WebBlazor/Components/_Imports.razor
+++ b/src/WebBlazor/Components/_Imports.razor
@@ -13,4 +13,5 @@
 @using WebBlazor.Components.Home
 @using WebBlazor.Components.Layout
 @using WebClient.Components
+@using WebClient.Components.Modals
 
