--- a/src/WebClient/Components/Tab.razor
+++ b/src/WebClient/Components/Tab.razor
@@ -1,4 +1,5 @@
-@rendermode InteractiveAuto
+@using System.Runtime.InteropServices
+@rendermode @(new InteractiveWebAssemblyRenderMode(prerender: false))
 
 @if (Tabs!.IsCurrentTab(Label) && Tabs.TabsLoaded)
 {
@@ -7,22 +8,22 @@
 
 @code {
 
-    [CascadingParameter]
-    private Tabs? Tabs { get; set; }
+    [Inject] ILogger<Tab>? Logger { get; set; }
 
-    [Parameter, EditorRequired]
-    public string Label { get; set; } = null!;
+    [CascadingParameter] private Tabs? Tabs { get; set; }
 
-    [Parameter]
-    public RenderFragment? ChildContent { get; set; }
-    
+    [Parameter, EditorRequired] public string Label { get; set; } = null!;
+
+    [Parameter] public RenderFragment? ChildContent { get; set; }
+
 
     protected override void OnInitialized()
     {
         if (Tabs is null)
             throw new InvalidOperationException("TimeSlotTab must be placed inside a Tabs component");
-        
+
         Tabs.AddTab(this);
     }
-    
+
 }
+
