--- a/src/WebClient/_Imports.razor
+++ b/src/WebClient/_Imports.razor
@@ -8,4 +8,5 @@
 @using Microsoft.JSInterop
 @using WebClient
 @using WebClient.Components
+@using WebClient.Components.Modals
 @using WebClient.Stores
