--- a/src/WebBlazor/Components/_Imports.razor
+++ b/src/WebBlazor/Components/_Imports.razor
@@ -10,6 +10,7 @@
 @using Microsoft.JSInterop
 @using WebBlazor
 @using WebBlazor.Components
+@using WebBlazor.Components.Product
 @using WebBlazor.Components.Shared
 @using WebBlazor.Components.Home
 @using WebBlazor.Components.Layout
