--- a/src/WebBlazor/Components/Pages/Search.razor
+++ b/src/WebBlazor/Components/Pages/Search.razor
@@ -4,7 +4,7 @@
 @inherits OwningComponentBase<IProductService>
 
 <main class="layout layout__full">
-    <ProductSection Heading="Search Results" FeaturedProducts="@Products"/>
+    @*<ProductSection Heading="Search Results" FeaturedProducts="@Products"/>*@
 </main>
 
 @code { 
