--- a/src/WebBlazor/Components/Product/ProductCard.razor
+++ b/src/WebBlazor/Components/Product/ProductCard.razor
@@ -36,7 +36,7 @@
     private string ProductDetailsUri => $"product/details/{Product.Id}"
                                         + (
                                             CartItemInfo?.ProductId is not null
-                                                ? $"?item={CartItemInfo}"
+                                                ? $"?item={CartItemInfo.Id}"
                                                 : string.Empty
                                         );
 
