Added main tag around content with width set to layout column width.

--- a/Server/src/Server.Web/Components/Pages/ProductDetails.razor
+++ b/Server/src/Server.Web/Components/Pages/ProductDetails.razor
@@ -2,6 +2,7 @@
 @attribute [StreamRendering]
 @page "/product/details/{id:int}"
 
+<main class="layout__content">
 @if (ShouldLoad)
 {
     <div class="product-details">
@@ -35,6 +36,7 @@ else
 {
     <p>Loading...</p>
 }
+</main>
 
 @code {
     [Parameter] public int Id { get; set; }
