Imported client components.

--- a/Server/src/Server.Web/Components/_Imports.razor
+++ b/Server/src/Server.Web/Components/_Imports.razor
@@ -7,6 +7,7 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using SunRaysMarket.Client.Components
 @using SunRaysMarket.Server.Application.Services
 @using SunRaysMarket.Server.Components
 @using SunRaysMarket.Server.Web.Components.Layout
