--- a/Server/src/Server.Web/wwwroot/css/dev/main.css
+++ b/Server/src/Server.Web/wwwroot/css/dev/main.css
@@ -1007,8 +1007,10 @@ body {
 .product-details__img {
   grid-column: left;
   grid-row: y-full;
+  align-self: center;
+  justify-self: center;
   display: block;
-  width: 100%;
+  width: 80%;
 }
 .product-details__body {
   grid-column: right;
