--- a/styles/scss/layouts/_footer.scss
+++ b/styles/scss/layouts/_footer.scss
@@ -1,7 +1,7 @@
 @use "../abstracts/variables" as var;
 
 .footer {
-  //height: 50rem;
+  height: var.$footer-height;
   background-color: var.$color-primary-dark;
 
   &__content {
@@ -11,8 +11,6 @@
     flex-direction: column;
     align-items: center;
     gap: 4rem;
-
-    padding: 8rem 4rem;
   }
 
   &__list {
