--- a/Server/src/Server.Web/Components/Layout/MainFooter.razor
+++ b/Server/src/Server.Web/Components/Layout/MainFooter.razor
@@ -1,4 +1,5 @@
-<footer class="layout layout__full footer">
+@using SunRaysMarket.Server.Components.Enums
+<PageLayout CssClasses="footer" ContentWidth="ContentWidth.PageFull" FitVerticalContent="false">
     <div class="footer__content">
         <ul class="footer__list">
             <li class="footer__item">
@@ -24,7 +25,7 @@
             <p>&copy; 2021 Sun Rays Market. All Rights Reserved.</p>
         </div>
     </div>
-</footer>
+</PageLayout>
 
 @code {
 
