--- a/Server/src/Server.Web/Components/Pages/Department.razor
+++ b/Server/src/Server.Web/Components/Pages/Department.razor
@@ -1,10 +1,11 @@
+@using SunRaysMarket.Server.Components.Enums
 @inherits OwningComponentBase<IProductService>
 @page "/Departments/{slug}/{id:int}"
 
 
-<main class="layout layout__full">
+<PageLayout ContentWidth="ContentWidth.PageFull">
     <ProductSection Heading="Featured Products" FeaturedProducts="@Products" />
-</main>
+</PageLayout>
 
 @code {
     [Parameter] public int Id { get; set; }
