--- a/Server/src/Server.Web/wwwroot/css/dev/main.css
+++ b/Server/src/Server.Web/wwwroot/css/dev/main.css
@@ -671,6 +671,7 @@ body {
 }
 
 .footer {
+  height: 25rem;
   background-color: #1c2837;
 }
 .footer__content {
@@ -679,7 +680,6 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 4rem;
-  padding: 8rem 4rem;
 }
 .footer__list {
   display: flex;
@@ -723,11 +723,7 @@ body {
   grid-template-rows: [header-start] min-content [header-end content-start] 1fr [content-end];
   row-gap: 6.4rem;
 }
-.layout--page {
-  grid-column: page;
-  overflow-y: scroll;
-}
-.layout__full {
+.layout--page, .layout__full {
   grid-column: page;
 }
 .layout__full > * {
@@ -735,6 +731,9 @@ body {
 }
 .layout__content {
   grid-column: layout;
+}
+.layout__content-vertical {
+  min-height: calc(100vh - 40rem);
 }
 
 .navigation {
