--- a/Server/src/Server.Web/Components/Pages/Checkout.razor
+++ b/Server/src/Server.Web/Components/Pages/Checkout.razor
@@ -3,7 +3,7 @@
 
 <AuthorizeView Roles="Customer">
     <Authorized>
-        <PageLayout CssClasses="checkout" ContentWidth="ContentWidth.PageContent">
+        <PageLayout CssClasses="checkout" ContentWidth="ContentWidth.PageFull" Element="div">
             <h1 class="">Checkout</h1>
             <CheckoutContent/>
         </PageLayout>
