Added initial styles for the fulfillment modal.

--- a/Client/src/Client.Components/Checkout/CheckoutContent.razor
+++ b/Client/src/Client.Components/Checkout/CheckoutContent.razor
@@ -9,7 +9,7 @@
 @if (ShouldLoadContent)
 {
     <div class="checkout__content">
-        <div class="checkout__column">
+        <div class="checkout-column checkout__sections">
             <CheckoutSection
                 ShowSection="true"
                 OnActionButtonClicked="OnFulfillmentActionBtnClicked">
