--- a/Server/src/Server.Web/Components/Layout/MainLayout.razor
+++ b/Server/src/Server.Web/Components/Layout/MainLayout.razor
@@ -1,4 +1,6 @@
 ﻿@using SunRaysMarket.Server.Components.Enums
+@using SunRaysMarket.Client.Components.Modals
+
 @inherits LayoutComponentBase
 
 <PageLayout LayoutType="LayoutType.Application" Element="div" xmlns="http://www.w3.org/1999/html">
