--- a/Client/src/Client.Components/Checkout/FulfilmentModal.razor
+++ b/Client/src/Client.Components/Checkout/FulfilmentModal.razor
@@ -33,47 +33,49 @@
         <Tab Label="Delivery">
             @if (DeliveryModel is not null && DeliveryTimeSlots.Any())
             {
-                <CheckoutSection>
-                    <Heading>Select delivery time </Heading>
-                    <ChildContent>
-                        <EditForm EditContext="@DeliveryContext" FormName="DeliveryTimeSlotsForm">
-                            <InputRadioGroup @bind-Value="DeliveryModel!.SelectedTimeSlotId">
-                                @foreach (var timeSlot in DeliveryTimeSlots)
-                                {
-                                    <div class="timeslot">
-                                        <InputRadio Value="timeSlot.Id"/>
-                                        <label>@timeSlot.TimeSlotDefinition.ToString()</label>
-                                    </div>
-                                }
-                            </InputRadioGroup>
-                        </EditForm>
-                    </ChildContent>
-                </CheckoutSection>
-
-                <CheckoutSection OnActionButtonClicked="@OnAddAddressBtnClicked">
-                    <Heading>Select address</Heading>
-                    <ActionButton>Add new address</ActionButton>
-                    <ChildContent>
-                        @if (CustomerAddresses.Any())
-                        {
-                            <EditForm EditContext="@CustomerAddressContext" FormName="DeliveryAddressForm">
-                                <InputRadioGroup @bind-Value="CustomerAddressModel!.SelectedAddressId">
-                                    @foreach (var address in CustomerAddresses)
+                <div class="checkout-column">
+                    <CheckoutSection>
+                        <Heading>Select delivery time </Heading>
+                        <ChildContent>
+                            <EditForm EditContext="@DeliveryContext" FormName="DeliveryTimeSlotsForm">
+                                <InputRadioGroup @bind-Value="DeliveryModel!.SelectedTimeSlotId">
+                                    @foreach (var timeSlot in DeliveryTimeSlots)
                                     {
-                                        <div>
-                                            <InputRadio Value="@address.Id"/>
-                                            <label>@address.Street</label>
+                                        <div class="timeslot">
+                                            <InputRadio Value="timeSlot.Id"/>
+                                            <label>@timeSlot.TimeSlotDefinition.ToString()</label>
                                         </div>
                                     }
                                 </InputRadioGroup>
                             </EditForm>
-                        }
-                        else
-                        {
-                            <p>No addresses available.</p>
-                        }
-                    </ChildContent>
-                </CheckoutSection>
+                        </ChildContent>
+                    </CheckoutSection>
+
+                    <CheckoutSection OnActionButtonClicked="@OnAddAddressBtnClicked">
+                        <Heading>Select address</Heading>
+                        <ActionButton>Add new address</ActionButton>
+                        <ChildContent>
+                            @if (CustomerAddresses.Any())
+                            {
+                                <EditForm EditContext="@CustomerAddressContext" FormName="DeliveryAddressForm">
+                                    <InputRadioGroup @bind-Value="CustomerAddressModel!.SelectedAddressId">
+                                        @foreach (var address in CustomerAddresses)
+                                        {
+                                            <div>
+                                                <InputRadio Value="@address.Id"/>
+                                                <label>@address.Street</label>
+                                            </div>
+                                        }
+                                    </InputRadioGroup>
+                                </EditForm>
+                            }
+                            else
+                            {
+                                <p>No addresses available.</p>
+                            }
+                        </ChildContent>
+                    </CheckoutSection>
+                </div>
             }
         </Tab>
     </Tabs>
@@ -113,7 +115,7 @@
         InitialTabIndex = model?.OrderType is not null
             ? Enum.GetName(typeof(OrderType), model.OrderType)
             : null;
-        
+
         TabsComponentShouldLoad = true;
     }
 
@@ -136,7 +138,7 @@
 
         await ChangeModalContent<AddressEntryModalContent, CreateAddressModel>(options);
     }
-    
+
     private const string StoreKey = "FulfillmentData";
     private Task StoreModel() => Store.SetValueAsync(StoreKey, Model);
 
@@ -170,7 +172,7 @@
                 SelectedTimeSlotId = Model.TimeSlotId!.Value
             }
             : new TimeSlotModel();
-        
+
         if (ModalContext.TempData.TryGetValue("AddressId", out var aId) && aId is int newAddressId)
         {
             Model = Model with { DeliveryAddressId = newAddressId };
@@ -230,8 +232,8 @@
         PickupModel = PickupContext.Model as TimeSlotModel;
         Model = new FulfillmentModel
         {
-            OrderType = OrderType.Pickup, 
-            TimeSlotId = PickupModel?.SelectedTimeSlotId, 
+            OrderType = OrderType.Pickup,
+            TimeSlotId = PickupModel?.SelectedTimeSlotId,
             DeliveryAddressId = null
         };
         await StoreModel();
