--- a/styles/scss/components/_modal.scss
+++ b/styles/scss/components/_modal.scss
@@ -31,6 +31,8 @@
     --width: 0;
     --height: 0;
     display: grid;
+    padding: var.$spacing-m;
+    grid-template-columns: [content-start left-start] 1fr [left-end right-start] max-content [right-end content-end];
     grid-template-rows: [y-full-start header-start] min-content 
     [header-end top-start body-start] 1fr 
     [top-end bottom-start] 1fr [bottom-end body-end y-full-end];
@@ -46,9 +48,10 @@
   }
   
   &__title {
+    grid-column: left;
     grid-row: header;
     align-self: center;
-    justify-self: center;
+    justify-self: start;
     
     font-size: var.$fs-l;
   }
@@ -57,6 +60,7 @@
     &,
     &:link,
     &:visited {
+      grid-column: right;
       grid-row: header;
       align-self: center;
       justify-self: end;
@@ -76,5 +80,13 @@
     }
   }
 
+  &__content {
+    grid-column: content;
+    grid-row: body;
+    
+    padding: var.$spacing-l;
+    height: 100%;
+    overflow-y: auto;
+  }
 
 }
