--- a/styles/scss/abstracts/_variables.scss
+++ b/styles/scss/abstracts/_variables.scss
@@ -2,7 +2,7 @@
 $color-primary-dark: #1c2837;
 $color-primary-medium: #2d4059;
 $color-primary-light: #3e5876;
-$color-primary-pale: #4f6f93;
+$color-primary-pale: #80a7d9;
 
 
 $color-secondary-dark: #ffc62d;
