--- a/Server/src/Server.Web/wwwroot/css/dev/main.css
+++ b/Server/src/Server.Web/wwwroot/css/dev/main.css
@@ -28,7 +28,7 @@ html {
 }
 
 body {
-  background-color: #ecf0f5;
+  background-color: white;
 }
 
 body {
@@ -595,6 +595,39 @@ body {
 .table td {
   border-bottom: 1px solid #d6d6d6;
   color: #545454;
+}
+
+.tabs {
+  display: flex;
+  flex-direction: column;
+  gap: 3.2rem;
+}
+.tabs__controls {
+  flex: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.tabs__control-btn {
+  text-transform: uppercase;
+  text-decoration: none;
+  display: inline-block;
+  transition: all 0.2s;
+  position: relative;
+  border: none;
+  cursor: pointer;
+  padding: 1.6rem;
+  font-weight: 600;
+  color: #545454;
+  background-color: #f5f5f5;
+}
+.tabs__control-btn--active {
+  color: #80a7d9;
+  background-color: #1c2837;
+}
+
+.tab-content {
+  flex: 1;
 }
 
 .tag {
